--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ Temporary Items
 #################
 
 *.pydevproject
-.project
+#.project
 .metadata
 bin/
 tmp/
@@ -96,7 +96,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.classpath
+#.classpath
 .settings/
 .loadpath
 
