--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libraries/dragshotMod.jar"/>
+	<classpathentry kind="lib" path="libraries/dragshotMod.jar" sourcepath="libraries/dragshotMod.zip"/>
+	<classpathentry kind="lib" path="libraries/easyogg.jar"/>
+	<classpathentry kind="lib" path="libraries/jl1.0.1.jar"/>
+	<classpathentry kind="lib" path="libraries/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="libraries/jorbis-0.0.15.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
