--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ jdk:
   - openjdk6
   
 script:
-  - javac -classpath "libraries/dragshotMod.jar:libraries/easyogg.jar:libraries/jl1.0.1.jar:libraries/jogg-0.0.7.jar:libraries/jorbis-0.0.15.jar" *.java -Xlint:deprecation
+  - javac -classpath "libraries/jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
+  - javac -classpath "libraries/dragshotMod.jar:libraries/easyogg.jar:libraries/jl1.0.1.jar:libraries/jogg-0.0.7.jar:libraries/jorbis-0.0.15.jar:javazoom/jl/player/" *.java -Xlint:deprecation
   - java -classpath "./" RunApp
