--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ jdk:
   
 script:
   - javac -classpath "libraries/jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
-  - javac -classpath "libraries/dragshotMod.jar:libraries/easyogg.jar:libraries/jl1.0.1.jar:libraries/jogg-0.0.7.jar:libraries/jorbis-0.0.15.jar" *.java -Xlint:deprecation
+  - javac -classpath "libraries/dragshotMod.jar:libraries/easyogg.jar:libraries/jl1.0.1.jar:libraries/jogg-0.0.7.jar:libraries/jorbis-0.0.15.jar:./" *.java -Xlint:deprecation
   - java -classpath "./" RunApp
