--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
+	<classpathentry excluding="data/|libraries/|music/|mystages/|stages/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libraries/dragshotMod.jar" sourcepath="libraries/dragshotMod.zip"/>
 	<classpathentry kind="lib" path="libraries/easyogg.jar"/>
