--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,31 @@
 	<version>0.0.1</version>
 	<name>OpenNFMM</name>
 
+  <properties>
+    <jogl.version>2.3.2</jogl.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
 
 	<dependencies>
-	  <dependency>
-	    <groupId>org.jogamp.glg2d</groupId>
-	    <artifactId>glg2d</artifactId>
-	    <version>0.3-SNAPSHOT</version>
-	  </dependency>
+
+		<dependency>
+	      <groupId>org.jogamp.gluegen</groupId>
+	      <artifactId>gluegen-rt-main</artifactId>
+	      <version>${jogl.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.jogamp.jogl</groupId>
+	      <artifactId>jogl-all-main</artifactId>
+	      <version>${jogl.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>4.11</version>
+	      <scope>test</scope>
+	    </dependency>
+
 	</dependencies>
 	<repositories>
 	  <repository>
@@ -22,4 +40,5 @@
 	    <url>http://brandonborkholder.github.com/glg2d/maven2/</url>
 	  </repository>
 	</repositories>
+
 </project>
