--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,32 @@
-# Appveyor doesn"t have JDK 8 by default in PATH so we must set it
+# Appveyor doesn't have JDK 8 by default in PATH so we must set it
 
-build_script: build.bat
+build_script:
+ - cmd: "C:\Program Files\Java\jdk1.8.0\bin\javac" -classpath "libraries\jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
+ - cmd: "C:\Program Files\Java\jdk1.8.0\bin\javac" -classpath "libraries\dragshotMod.jar;libraries\easyogg.jar;libraries\jl1.0.1.jar;libraries\jogg-0.0.7.jar;libraries\jorbis-0.0.15.jar;libraries/NativeBass.jar;libraries/NativeBass-Examples.jar;%CD%" *.java -Xlint:deprecation
+
+environment:
+  access_token:
+   secure: G8waKkParfgirZh3PKxylzY7tRDL4expH+CRtNjsh3FpKrfnzPld2nYsn+FQtn07
+
+skip_commits:
+  # Regex for matching commit message
+  message: /Generated Javadocs/
+  # Commit author's username, name, email or regexp maching one of these.
+  author: Appveyor Automated Build
+
+# Note: AppVeyor checkout only the last commit and not the entire branch. So you may have to checkout the wanted branch: git checkout master
+on_success:
+ - cmd: SET PATH=%tempath%
+ - git config --global credential.helper store
+ - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
+ - git config --global user.email "bbbbbbenes@outlook.com.br"
+ - git config --global user.name "Appveyor Automated Build"
+ - cmd: For /f "tokens=2-4 delims=/ " %%a in ('date /t') do (set mydate=%%c-%%a-%%b)
+ - cmd: For /f "tokens=1-2 delims=/:" %%a in ('time /t') do (set mytime=%%a%%b)
+ - git checkout --orphan javadocs
+ - git rm --cached -r .
+ - cmd: mkdir doc
+ - cmd: "C:\Program Files\Java\jdk1.8.0\bin\javadoc" -d doc -sourcepath %CD%
+ - git add doc/*
+ - git commit -m "Generated Javadocs at %mydate%_%mytime% [skip ci]"
+ - git push origin javadocs
