--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,11 @@ on_success:
  - git config --global user.name "Appveyor Automated Build"
  - cmd: For /f "tokens=2-4 delims=/ " %%a in ('date /t') do (set mydate=%%c-%%a-%%b)
  - cmd: For /f "tokens=1-2 delims=/:" %%a in ('time /t') do (set mytime=%%a%%b)
- - git checkout -f javadocs
-# - git rm --cached -r -f .
+ - git branch -d javadocs
+ - git checkout --orphan javadocs
+ - git rm --cached -r -f .
+ - git pull
+# - git checkout -f javadocs
  - cmd: rd /s /q doc
  - cmd: mkdir doc
  - cmd: SET PATH="C:\Program Files\Java\jdk1.8.0\bin"
