--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ skip_commits:
 # Note: AppVeyor checkout only the last commit and not the entire branch. So you may have to checkout the wanted branch: git checkout master
 on_success:
  - cmd: SET PATH=%tempath%
+ - git checkout master
  - git config --global credential.helper store
  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
  - git config --global user.email "bbbbbbenes@outlook.com.br"
