--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,11 +27,19 @@ on_success:
  - cmd: For /f "tokens=2-4 delims=/ " %%a in ('date /t') do (set mydate=%%c-%%a-%%b)
  - cmd: For /f "tokens=1-2 delims=/:" %%a in ('time /t') do (set mytime=%%a%%b)
 #
- - cmd: mkdir doc
+# - cmd: mkdir doc
  - cmd: SET PATH="C:\Program Files\Java\jdk1.8.0\bin"
  - cmd: javadoc -d doc -classpath "libraries\dragshotMod.jar;libraries\easyogg.jar;libraries\jl1.0.1.jar;libraries\jogg-0.0.7.jar;libraries\jorbis-0.0.15.jar;libraries/NativeBass.jar;libraries/NativeBass-Examples.jar;%CD%" -sourcepath "%CD%" *.java
  - cmd: SET PATH=%tempath%
 #
- - git add doc/*
+ - cmd: mkdir %USERPROFILE%\gh-pages
+ - git clone --quiet --branch=gh-pages https://github.com/chrishansen69/OpenNFMM %USERPROFILE%\gh-pages
+ #>nul
+ - cmd: copy /y doc %USERPROFILE%\gh-pages
+ - cmd: cd %USERPROFILE%\gh-pages
+ - cmd: dir
+ - git add -f .
+#
+# - git add doc/*
  - git commit -m "Generated Javadocs at %mydate%_%mytime% [skip ci]"
- - git push origin master
+ - git push origin gh-pages
