--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ on_success:
  - cmd: SET PATH=%tempath%
 #
  - cmd: mkdir %USERPROFILE%\gh-pages
- - cmd: mkdir %USERPROFILE%\gh-pages\doc
+# - cmd: mkdir %USERPROFILE%\gh-pages\doc
  - git clone --quiet --branch=gh-pages https://github.com/chrishansen69/OpenNFMM %USERPROFILE%\gh-pages
  #>nul
  - cmd: copy /y doc %USERPROFILE%\gh-pages\doc
