--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ on_success:
 #
 # - cmd: mkdir doc
  - cmd: SET PATH="C:\Program Files\Java\jdk1.8.0\bin"
- - cmd: javadoc -d doc -classpath "libraries\dragshotMod.jar;libraries\easyogg.jar;libraries\jl1.0.1.jar;libraries\jogg-0.0.7.jar;libraries\jorbis-0.0.15.jar;libraries/NativeBass.jar;libraries/NativeBass-Examples.jar;%CD%" -sourcepath "%CD%" BASSLoader.java CarDefine.java CarMaker.java CheckPoints.java ContO.java Control.java GameSparker.java Lobby.java Login.java Mad.java Madness.java Medium.java Mod.java ModInstrument.java ModTrackInfo.java MouseHandler.java Plane.java RadicalBASS.java RadicalMidi.java RadicalMod.java RadicalMp3.java RadicalMusic.java RadicalOgg.java Record.java Smenu.java StageMaker.java SuperClip.java Trackers.java UDPMistro.java UlawUtils.java Utility.java Wheels.java soundClip.java udpOnline.java udpServe.java xtGraphics.java
+ - cmd: javadoc -d doc -classpath "libraries\dragshotMod.jar;libraries\easyogg.jar;libraries\jl1.0.1.jar;libraries\jogg-0.0.7.jar;libraries\jorbis-0.0.15.jar;libraries/NativeBass.jar;libraries/NativeBass-Examples.jar;%CD%" -private -sourcepath "%CD%" BASSLoader.java CarDefine.java CarMaker.java CheckPoints.java ContO.java Control.java GameSparker.java Lobby.java Login.java Mad.java Madness.java Medium.java Mod.java ModInstrument.java ModTrackInfo.java MouseHandler.java Plane.java RadicalBASS.java RadicalMidi.java RadicalMod.java RadicalMp3.java RadicalMusic.java RadicalOgg.java Record.java Smenu.java StageMaker.java SuperClip.java Trackers.java UDPMistro.java UlawUtils.java Utility.java Wheels.java soundClip.java udpOnline.java udpServe.java xtGraphics.java
  - cmd: SET PATH=%tempath%
 #
  - cmd: mkdir %USERPROFILE%\gh-pages
