--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
 # Appveyor doesn't have JDK 8 by default in PATH so we must set it
 
+# only build master (currently this is the only way to avoid the build failing on other branches)
+branches:
+  only:
+    - master
+
 build_script:
  - cmd: SET tempath=%PATH%
  - cmd: SET PATH="C:\Program Files\Java\jdk1.8.0\bin"
