--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,16 @@ os:
   - linux
   - osx
 
-jdk:
-  - oraclejdk8
+before_install:
+  - |
+    if [ $TRAVIS_OS_NAME == "osx" ]
+      then
+        "wget --no-cookies --no-check-certificate --header \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" http://download.oracle.com/otn-pub/java/jdk/8u66-b17/jdk-8u66-macosx-x64.dmg"
+        hdiutil mount jdk-8u66-macosx-x64.dmg
+        sudo installer -pkg /Volumes/JDK\ 8\ Update\ 66/JDK\ 8\ Update\ 66.pkg -target LocalSystem
+      else
+        jdk_switcher use oraclejdk8
+      fi
 
 script:
   - javac -classpath "libraries/jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
