--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - |
     if [ $TRAVIS_OS_NAME == "osx" ]
     then
-      "wget --no-cookies --no-check-certificate --header \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-macosx-x64.dmg"
+      "curl --no-cookies --no-check-certificate -H \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-macosx-x64.dmg"
       hdiutil mount jdk-8u73-macosx-x64.dmg
       sudo installer -pkg /Volumes/JDK\ 8\ Update\ 73/JDK\ 8\ Update\ 73.pkg -target LocalSystem
     else
