--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,9 @@ sudo: false
 
 os:
   - linux
-  - osx
 
 before_install:
-  - |
-    if [ $TRAVIS_OS_NAME == "osx" ]
-    then
-      "curl --no-cookies --no-check-certificate -H \"Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie\" http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-macosx-x64.dmg"
-      hdiutil mount jdk-8u73-macosx-x64.dmg
-      sudo installer -pkg /Volumes/JDK\ 8\ Update\ 73/JDK\ 8\ Update\ 73.pkg -target LocalSystem
-    else
-      jdk_switcher use oraclejdk8
-    fi
+  - jdk_switcher use oraclejdk8
 
 script:
   - javac -classpath "libraries/jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
