--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding=".settings/|bin/|data/|libraries/|music/|mystages/|stages/|mycars/|libraries/dlls/win32/|libraries/dlls/win64/|doc/|target/classes/|target/classes/javazoom/jl/player/|target/" kind="src" path=""/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libraries/bin/dragshotMod.jar"/>
 	<classpathentry kind="lib" path="libraries/bin/easyogg.jar"/>
@@ -12,5 +12,5 @@
 	<classpathentry kind="lib" path="libraries/bin/NativeBass.jar" sourcepath="libraries/src/bass_src.zip"/>
 	<classpathentry kind="lib" path="libraries/bin/rsyntaxtextarea-2.5.8.jar"/>
 	<classpathentry kind="lib" path="libraries/bin/trove-3.1a1.jar" sourcepath="libraries/src/trove-3.1a1-src.jar"/>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
