fix travis/appveyor build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ before_install:
   - jdk_switcher use oraclejdk8
 
 script:
-  - javac -classpath "libraries/jl1.0.1.jar" javazoom/jl/player/PausablePlayer.java
-  - javac -classpath "libraries/dragshotMod.jar:libraries/easyogg.jar:libraries/jl1.0.1.jar:libraries/jogg-0.0.7.jar:libraries/jorbis-0.0.15.jar:libraries/NativeBass.jar:libraries/NativeBass-Examples.jar:./" *.java -Xlint:deprecation
+  - sh build.sh
