gr==-1337 and 1337 now make the current polys projf copy the prev/next respectively

--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="libraries/bin/jorbis-0.0.15.jar"/>
 	<classpathentry kind="lib" path="libraries/bin/NativeBass-Examples.jar" sourcepath="libraries/src/bass_examples.zip"/>
 	<classpathentry kind="lib" path="libraries/bin/NativeBass.jar" sourcepath="libraries/src/bass_src.zip"/>
-	<classpathentry kind="lib" path="libraries/bin/rsyntaxtextarea-2.5.8.jar"/>
+	<classpathentry kind="lib" path="libraries/bin/rsyntaxtextarea-2.5.8.jar" sourcepath="C:/Portable Programs/maven/repo/com/fifesoft/rsyntaxtextarea/2.5.8/rsyntaxtextarea-2.5.8-sources.jar"/>
 	<classpathentry kind="lib" path="libraries/bin/trove-3.1a1.jar" sourcepath="libraries/src/trove-3.1a1-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
